--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rwoody/semantic-release-test.git"
+    "url": "git@github.com:rwoody/semantic-release-test.git"
   },
   "devDependencies": {
     "commitizen": "^3.0.5",
